add path links for admin garage view

--- a/views/pending-garages.hbs
+++ b/views/pending-garages.hbs
@@ -113,7 +113,7 @@
 							<div class="panel-body">
 								<ul class="nav navbar-nav">
 									<li><a href="/admin/pending_garages">Pending Garages</a></li>
-									<li><a href="#">All Garages</a></li>
+									<li><a href="/admin/publishedGarages">All Garages</a></li>
 				
 
 
