--- a/views/vehicle-ad-view.hbs
+++ b/views/vehicle-ad-view.hbs
@@ -90,6 +90,11 @@
                         <td>Condition:</td>
                         <td> {{ this.condition }}</td>
                       </tr>
+
+                      <tr>
+                        <td>Price:</td>
+                        <td> {{ this.price }}</td>
+                      </tr>
                    
                          <tr>
                              <tr>
