--- a/views/vehicle-ads-all.hbs
+++ b/views/vehicle-ads-all.hbs
@@ -173,7 +173,7 @@
         <div class="col-md-6">
  
 
-{{#each items }}
+{{#each items1 }}
   <div class="container" >
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6" >
