--- a/views/pending-spare-parts-ads.hbs
+++ b/views/pending-spare-parts-ads.hbs
@@ -24,7 +24,7 @@
 				<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="#">
-				<a class="navbar-brand" href="#"   style="font-family: 'Berkshire Swash', sans-serif">VehiclePartner.lk</a>
+				<a class="navbar-brand" href="/"   style="font-family: 'Berkshire Swash', sans-serif">VehiclePartner.lk</a>
 			</a>
 		</div>
 
@@ -32,7 +32,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">      
 			
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="http://www.pingpong-labs.com" target="_blank">LogOut</a></li>
+				<li><a href="/" target="_blank">LogOut</a></li>
 				
 				</ul>
 			</div><!-- /.navbar-collapse -->
@@ -66,9 +66,9 @@
 						<div id="dropdown-lvl1" class="panel-collapse collapse">
 							<div class="panel-body">
 								<ul class="nav navbar-nav">
-									<li><a href="#">All Pending Ads of Vehicle Category</a></li>
-									<li><a href="#">All Pending Ads of Spareparts Category</a></li>
-									<li><a href="#">All Pending Ads of Vehicle Rent Category</a></li>
+									<li><a href="/admin/pending_vehicle_ads">All Pending Ads of Vehicle Category</a></li>
+									<li><a href="/admin/pending_sp_ads">All Pending Ads of Spareparts Category</a></li>
+									<li><a href="/admin/pending_rent_ads">All Pending Ads of Vehicle Rent Category</a></li>
 
 
 								
@@ -113,7 +113,7 @@
   		<div class="col-md-10 content">
   			  <div class="panel panel-default">
 	<div class="panel-heading">
-		Pending Vehicle Ads
+		Pending spare parts Ads
 	</div>
 <!--	<div class="panel-body">
 		
