--- a/views/index.hbs
+++ b/views/index.hbs
@@ -71,7 +71,7 @@
 
       <div class="container" >
         <div class="row_1">
-          <a href="#">
+          <a href="/spare_part">
           <div class="section_1">
             <div class="image-bg"></div>
             <div class="text">Spare Parts</div>
