--- a/views/pending-garages.hbs
+++ b/views/pending-garages.hbs
@@ -67,7 +67,7 @@
 							<div class="panel-body">
 								<ul class="nav navbar-nav">
 									<li><a href="/admin/pending_vehicle_ads">All Pending Ads of Vehicle Category</a></li>
-									<li><a href="#">All Pending Ads of Spareparts Category</a></li>
+									<li><a href="/admin/pending_sp_ads">All Pending Ads of Spareparts Category</a></li>
 									<li><a href="/admin/pending_rent_ads">All Pending Ads of Vehicle Rent Category</a></li>
 
 
