--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -41,7 +41,7 @@
                         
                         <button type="button" class="btn btn-info btn-lg btn-block"><a  href="/users/vehicle_ad_form">Sell a Vehicle</a></button>
 <button type="button" class="btn btn-info btn-lg btn-block"><a  href="/users/spare_part_ad_form">Sell a Spare Part</a></button>
-<button type="button" class="btn btn-primary btn-lg btn-block"><a  href="/users/rent_ad_form">Rent a Vehicle</a></button>
+<button type="button" class="btn btn-info btn-lg btn-block"><a  href="/users/rent_ad_form">Rent a Vehicle</a></button>
                     </ul>
                 </div>
                 <!--/.well -->
